src/tests/snapshots/swayward__tests__window_opening__check_target_size@b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1272 × 712, bounds: 1272 × 712, states: []

post-map configures:
size: 1272 × 694, bounds: 1272 × 712, states: [Activated]
